base component ok, ready to style

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 
 </head>
 <body>
-  <my-side-drawer>Hello fro sidedrawer tag</my-side-drawer>
+  <my-side-drawer></my-side-drawer>
 </body>
 </html>
