done for today, nothing changed

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     // timer to change title with 2 methods: changing attribute value and setting attribute
     // setTimeout(() => {
     //   sideDrawer.title = "changed from el title reflected";
-    //   sideDrawer.setAttribute("title", "changed from setAttribute");
+    //   // sideDrawer.setAttribute("title", "changed from setAttribute");
     // }, 1000);
   </script>
 </body>
