adding tooltip components to project

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
 <body>
   
   <button id="side-drawer-button">Open SD</button>
-  
+  <my-tooltip>
+    
+  </my-tooltip>
   <my-side-drawer title="MENU">
     <navbar class="side-drawer-nav">
       <ul>
