--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   
   <button id="side-drawer-button">Open SD</button>
   <my-tooltip tooltiptext="hello from tooltip text attribute, type your tip in this attribute">
-    <h2 slot="main-text">This is a test to have a tooltip on the page try to make it robust, bastard</h2>
+    <h2 slot="main-text">This is a test to have a tooltip</h2>
   </my-tooltip>
   <my-side-drawer title="MENU">
     <navbar class="side-drawer-nav">
