adding backdrop effect to tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
   <button id="side-drawer-button">Open SD</button>
 
   <div id="container">
-    <h3>This is a test to have a tooltip</h3>
-    <my-tooltip>This is the text of the tooltip</my-tooltip>
+    <h3>Click on the "?" to have a tip</h3>
+    <my-tooltip>This is a tip coming from the my-tooltip slot 😊</my-tooltip>
   </div>
   
   <my-side-drawer title="MENU">
